<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- shared -->
    <string name="app_name" translatable="false">Yodel</string>
    <string name="share_to_download_label">Download from YouTube</string>
    <string name="empty_text">Empty,\nlike my soul</string>
    <string name="fallback_title">Unknown</string>
    <string name="base_toast_select_download_directory">Select the folder you want to save tracks in</string>
    <string name="base_toast_set_download_directory_fail">could not set downloads directory! please try again, or report this issue</string>
    <string name="locale_system_default">Follow System</string>

    <!-- bottom navigation in main -->
    <string name="main_nav_tracks">Tracks</string>
    <string name="main_nav_more">More</string>

    <!-- tracks -->
    <string name="tracks_artist_and_album" formatted="true">%1$s • %2$s</string>
    <string name="tracks_re_download">Retry Download</string>
    <string name="tracks_play_failed">Failed to open audio player</string>
    <string name="tracks_undo_delete">Undo</string>

    <!-- replace track dialog -->
    <string name="tracks_replace_existing_title">Replace Track?</string>
    <string name="tracks_replace_existing_message" formatted="true">\'%1$s\' was already downloaded? <br/> Do you want to replace it?</string>
    <string name="tracks_replace_existing_positive">Yes, Replace</string>
    <string name="tracks_replace_existing_negative">No</string>

    <!-- more -->
    <string name="more_about">About</string>
    <string name="more_select_downloads_dir">Select Folder for Downloads</string>
    <string name="more_app_language_hint">Language</string>
    <string name="more_download_format_hint">Download Format</string>
    <string name="more_enable_ssl_fix">Enable SSL Fix</string>
    <string name="more_enable_tagging">Write Track metadata</string>
    <string name="more_backup">Export</string>
    <string name="more_restore">Import</string>

    <!-- backup / restore -->
    <string name="backup_toast_starting">Creating Backup…</string>
    <string name="restore_toast_starting">Restoring Backup…</string>
    <string name="backup_toast_failed">Could not write backup!</string>
    <string name="restore_toast_failed">Could not load backup!</string>
    <string name="restore_toast_success" formatted="true">Restored %1$d tracks!</string>

    <string name="restore_dialog_title" formatted="true">Import %1$d Tracks?</string>
    <string name="restore_dialog_keep_existing">Keep existing Tracks</string>
    <string name="restore_dialog_overwrite_existing">Replace existing Tracks</string>
    <string-array name="restore_dialog_modes">
        <item>@string/restore_dialog_keep_existing</item>
        <item>@string/restore_dialog_overwrite_existing</item>
    </string-array>
    <string name="restore_dialog_negative">Cancel</string>
    <string name="restore_dialog_positive">Import</string>

    <!-- share -->
    <string name="share_toast_ok">Download Queued</string>
    <string name="share_toast_fail">Cannot download shared video!</string>

    <!-- dl service -->
    <string name="dl_notification_subtext" formatted="true">Downloading • ETA %1$s</string>
    <string name="dl_status_starting_download">Starting Download</string>
    <string name="dl_status_process_metadata">Processing Metadata</string>
    <string name="dl_status_finish">Finishing Download</string>

    <!-- notification channels -->
    <string name="channel_default_name">Default</string>
    <string name="channel_default_description">the fallback notification channel</string>
    <string name="channel_downloader_name">Downloads</string>
    <string name="channel_downloader_description">sends information about in- progress downloads</string>
    <string name="channel_devtools_name">Developer Tools</string>
    <string name="channel_devtools_description">sends error messages and similar things when enabled in devtools</string>

    <!-- file formats -->
    <string name="file_format_mp3">MP3 (with metadata)</string>
    <string name="file_format_aac">AAC</string>
    <string name="file_format_webm">WebM Audio</string>
    <string name="file_format_ogg">OGG</string>
    <string name="file_format_flac">FLAC</string>
    <string name="file_format_wav">WAV</string>

    <!-- about libraries -->
    <string name="aboutLibraries_description_showIcon" translatable="false" tools:keep="@string/aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion" translatable="false" tools:keep="@string/aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text" tools:keep="@string/aboutLibraries_description_text">a app for downloading music from YouTube</string>
</resources>