<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.more.MoreFragment">

    <!-- floating app logo -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        android:src="@drawable/ic_round_placeholder_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- options -->
    <ScrollView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- about -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_about"
                android:textAllCaps="false" />

            <!-- downloads dir -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_downloads_dir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_select_downloads_dir"
                android:textAllCaps="false" />

            <!-- download format -->
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/downloads_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- enable writing metadata -->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/enable_tagging"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_enable_tagging" />

            <!-- ssl fix -->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/enable_ssl_fix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_enable_ssl_fix" />

            <!-- import / export -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <!-- export tracks -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/backup_tracks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/more_backup"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_round_upload_24" />

                <!-- import tracks -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/restore_tracks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/more_restore"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_round_download_24" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>